--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,9 @@ img {width: 330px; margin: 5px auto;}
 img {width: 280px; margin: 5px auto;}
 }
 
-#parent {position: relative;}
+.parent {position: relative;}
 
-#child {
+.child {
     position: absolute;
     width: 100%;   
     height: 100%;
@@ -172,12 +172,6 @@ img {width: 280px; margin: 5px auto;}
      background-color: #ee0;
 }
 
-.col:focus {
-     display: block;
-     color: #red; /* old red; */
-     background-color: #ee0;
- 
-}
 
 a { color: #ededed;} /* old #FFF */
 
